modify twingraph
